# library-system-api

./: Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  schema.yml
.github/workflows/: continuous_integration.yaml
authors/: admin.py  models.py  serializers.py  views.py
authors/migrations/: 0001_initial.py  0002_alter_author_id.py  0003_alter_author_id.py
books/: admin.py  models.py  serializers.py  views.py
books/migrations/: 0001_initial.py  0002_book_cover.py  0003_rename_name_book_title.py  0004_alter_book_id.py  0005_alter_book_id.py  0006_book_authors.py  0007_category_book_category.py  0008_publisher_bookcopy.py  0009_alter_bookcopy_publisher.py  0010_alter_bookcopy_publisher.py  0011_alter_bookcopy_options_alter_category_options.py  0012_remove_book_cover_bookcopy_cover.py
setup/: settings.py  urls.py
tests/authors/: e2e_tests.py  factories.py
tests/book_copies/: e2e_tests.py  factories.py
tests/books/: e2e_tests.py  factories.py
tests/categories/: e2e_tests.py  factories.py
tests/publishers/: e2e_tests.py  factories.py
utils/: api_permissions.py
