[tool.poetry]
name = "library-system-api"
version = "0.1.0"
description = "Library System API"
authors = ["Rodrigo Saraiva <rodrigobezerrasaraiva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
djangorestframework = "^3.14.0"
pillow = "^9.4.0"
psycopg2-binary = "^2.9.5"
drf-flex-fields = "^1.0.0"
django-filter = "^22.1"
drf-spectacular = "^0.25.1"
mkdocs = "^1.4.2"
pytest-django = "^4.5.2"
drf-extra-fields = "^3.4.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
blue = "^0.9.1"
django-extensions = "^3.2.1"
pytest-mock = "^3.10.0"
requests-mock = "^1.10.0"
django-mock-queries = "^2.1.7"
pytest-cov = "^4.0.0"
factory-boy = "^3.2.1"

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "setup.settings"
python_files = "tests.py test_*.py *_tests.py"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
